# mate-toolkit

./: .gitignore  environment.yml  pyproject.toml
.github/workflows/: build.yml
crate_kit/: cli.py  enrich.py  from_issue.py  issue_form.py
crate_kit/profiles/: base.yml
example/dummy-model/: .gitignore  CITATION.cff  README.md
example/dummy-model/model_code_inputs/: README.md  model.py  params.yaml
example/dummy-model/model_code_inputs/input_files/: mesh.json
example/dummy-model/model_output_data/: README.md
mate_toolkit/: __init__.py  build_crate.py  cli.py  describe.py  from_issue.py  gitprov.py  ignore.py  issue_form.py  meta.py  payload.py  render.py  validate.py
mate_toolkit/profiles/: mate-geoscience.yml
