[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crate-kit"
version = "0.0.1"
description = "Link a GitHub repository to its RO-Crate: build the crate from the repo and render it."
requires-python = ">=3.10"
dependencies = ["rocrate", "pyyaml", "pathspec", "jmespath"]
# NB: quarto is NOT a pip package — it comes from conda-forge (see environment.yml)
# or the quarto-dev/quarto-actions/setup action in CI. Only `crate render` needs it.

[project.scripts]
crate = "crate_kit.cli:main"

# Seeds the plugin model (TARGET_ARCHITECTURE.md §5b): actions are discovered here.
[project.entry-points."crate_kit.actions"]
build = "crate_kit.build_crate:build_crate"
render = "crate_kit.render:render"
validate = "crate_kit.validate:validate"

[tool.setuptools]
packages = ["crate_kit"]

[tool.setuptools.package-data]
crate_kit = ["profiles/*.yml", "profiles/*.md"]
